<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/pedestrian_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:stateListAnimator="@null"
            android:text="@string/pedestrian_title"
            android:textColor="@color/colorNull"
            app:backgroundTint="@color/colorPrimaryDark"
            app:elevation="0dp"
            app:icon="@drawable/ic_directions_walk_black_24dp"
            app:iconTint="@color/colorNull"
            app:rippleColor="@color/colorNull" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/reminder_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:stateListAnimator="@null"
            android:text="@string/notification_title"
            app:backgroundTint="@color/colorNull"
            app:elevation="0dp"
            app:icon="@drawable/ic_schedule_black_24dp"
            app:rippleColor="@color/colorGrey"
            app:strokeWidth="1dp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/share_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:stateListAnimator="@null"
            android:text="@string/share_title"
            app:backgroundTint="@color/colorNull"
            app:elevation="0dp"
            app:icon="@drawable/ic_share_black_24dp"
            app:rippleColor="@color/colorGrey"
            app:strokeWidth="1dp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/delete_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:stateListAnimator="@null"
            android:text="@string/dialog_menu_title"
            app:backgroundTint="@color/colorNull"
            app:elevation="0dp"
            app:icon="@drawable/ic_delete_forever_black_24dp"
            app:rippleColor="@color/colorGrey"
            app:strokeWidth="1dp" />

    </LinearLayout>

</HorizontalScrollView>